force-app/main/default/objects/Imported_Transaction__c/Imported_Transaction__c.object-meta.xml
<CustomObject>
    <description>Stores raw transaction data imported from external systems for matching and commission processing.</description>
    <label>Imported Transaction</label>
    <nameField>
        <displayFormat>IT-{000000}</displayFormat>
        <label>Imported Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imported Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>