force-app/main/default/objects/Imported_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Lookup to the matched Salesforce Account.</description>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Imported Transactions</relationshipLabel>
    <relationshipName>Imported_Transactions_Acct</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>