force-app/main/default/objects/Imported_Transaction__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Account name as provided by the source system.</description>
    <label>Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>