force-app/main/default/objects/Imported_Transaction__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <description>Identifier for the import batch this transaction belongs to.</description>
    <label>Batch Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>