force-app/main/default/objects/Imported_Transaction__c/fields/Commission_Processed__c.field-meta.xml
<CustomField>
    <fullName>Commission_Processed__c</fullName>
    <description>Indicates whether commission has been calculated for this transaction.</description>
    <label>Commission Processed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>