force-app/main/default/objects/Imported_Transaction__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>ISO currency code for the transaction amount.</description>
    <label>Currency Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>