force-app/main/default/objects/Imported_Transaction__c/fields/Custom_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_1__c</fullName>
    <description>Flexible field for additional transaction data from external systems.</description>
    <label>Custom Field 1</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>