force-app/main/default/objects/Imported_Transaction__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Lookup to the linked Opportunity record.</description>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Imported Transactions</relationshipLabel>
    <relationshipName>Imported_Transactions_Opp</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>