force-app/main/default/objects/Imported_Transaction__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <description>Lookup to the User record representing the participant.</description>
    <label>Participant</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Imported Transactions</relationshipLabel>
    <relationshipName>Imported_Transactions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>