force-app/main/default/objects/Imported_Transaction__c/fields/Participant_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Participant_External_Id__c</fullName>
    <description>External identifier for the participant, used for matching.</description>
    <label>Participant External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>