force-app/main/default/objects/Imported_Transaction__c/fields/Processing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Processing_Notes__c</fullName>
    <description>Notes and details about transaction processing results.</description>
    <label>Processing Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>