force-app/main/default/objects/Imported_Transaction__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Lookup to the matched Salesforce Product.</description>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Imported Transactions</relationshipLabel>
    <relationshipName>Imported_Transactions_Prod</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>