force-app/main/default/objects/Imported_Transaction__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product name as provided by the source system.</description>
    <label>Product Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>