force-app/main/default/objects/Imported_Transaction__c/fields/Transaction_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Category_Code__c</fullName>
    <description>Category code classifying the transaction type.</description>
    <label>Transaction Category Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>