force-app/main/default/objects/Imported_Transaction__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>Date the transaction occurred in the source system.</description>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>